fix teamcard mix blend mod on safari

--- a/src/components/TeamCard/styles.scss
+++ b/src/components/TeamCard/styles.scss
@@ -7,9 +7,10 @@
   box-shadow: var(--shadow-lg);
   transition: 0.5s;
   transform-style: preserve-3d;
+  overflow: hidden;
 
-  &:hover &-image-container::after {
-    border-radius: var(--radius-xl);
+  &:hover &-image-container::before {
+    mix-blend-mode: multiply;
     opacity: var(--opacity-1);
   }
 
@@ -32,8 +33,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: var(--radius-xl);
 
-    &::after {
+    &::before {
       content: '';
       position: absolute;
       top: 0;
@@ -49,7 +51,6 @@
       z-index: 1;
       opacity: var(--opacity-0);
       transition: 0.2s;
-      mix-blend-mode: multiply;
     }
   }
 
